{
  "version": 4,
  "terraform_version": "1.2.3",
  "serial": 84,
  "lineage": "002ddbcc-8e64-1b63-a630-77c59bc71443",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "region1-vm01-nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/26ab1224-52b0-4168-b673-e29ef41a642e/resourceGroups/vWANDemo-uksouth-vwan-rg-01/providers/Microsoft.Network/networkInterfaces/uksouth-vm01-nic",
            "internal_domain_name_suffix": "wsbdqt3yaazu1ghgwuf02luhbg.zx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "uksouth-vm01-ipconfig",
                "primary": true,
                "private_ip_address": "10.10.11.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/26ab1224-52b0-4168-b673-e29ef41a642e/resourceGroups/vWANDemo-uksouth-vwan-rg-01/providers/Microsoft.Network/publicIPAddresses/uksouth-vm01-pip",
                "subnet_id": "/subscriptions/26ab1224-52b0-4168-b673-e29ef41a642e/resourceGroups/vWANDemo-uksouth-vwan-rg-01/providers/Microsoft.Network/virtualNetworks/uksouth-vnet-01/subnets/uksouth-vnet-01-snet-01"
              }
            ],
            "location": "uksouth",
            "name": "uksouth-vm01-nic",
            "private_ip_address": "10.10.11.4",
            "private_ip_addresses": [
              "10.10.11.4"
            ],
            "resource_group_name": "vWANDemo-uksouth-vwan-rg-01",
            "tags": {
              "Environment": "jakewalsh90-vWAN-DemoLab"
            }
          },
          "dependencies": [
            "azurerm_public_ip.region1-vm01-pip",
            "azurerm_resource_group.region1-rg1",
            "azurerm_subnet.region1-vnet1-snet1",
            "azurerm_virtual_network.region1-vnet1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "region2-vm01-nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/26ab1224-52b0-4168-b673-e29ef41a642e/resourceGroups/vWANDemo-eastus-vwan-rg-01/providers/Microsoft.Network/networkInterfaces/eastus-vm01-nic",
            "internal_domain_name_suffix": "s11ghhecyefufpltedxndiybsg.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "eastus-vm01-ipconfig",
                "primary": true,
                "private_ip_address": "10.20.11.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/26ab1224-52b0-4168-b673-e29ef41a642e/resourceGroups/vWANDemo-eastus-vwan-rg-01/providers/Microsoft.Network/publicIPAddresses/eastus-vm01-pip",
                "subnet_id": "/subscriptions/26ab1224-52b0-4168-b673-e29ef41a642e/resourceGroups/vWANDemo-eastus-vwan-rg-01/providers/Microsoft.Network/virtualNetworks/eastus-vnet-01/subnets/eastus-vnet-01-snet-01"
              }
            ],
            "location": "eastus",
            "name": "eastus-vm01-nic",
            "private_ip_address": "10.20.11.4",
            "private_ip_addresses": [
              "10.20.11.4"
            ],
            "resource_group_name": "vWANDemo-eastus-vwan-rg-01",
            "tags": {
              "Environment": "jakewalsh90-vWAN-DemoLab"
            }
          },
          "dependencies": [
            "azurerm_public_ip.region2-vm01-pip",
            "azurerm_resource_group.region2-rg1",
            "azurerm_subnet.region2-vnet1-snet1",
            "azurerm_virtual_network.region2-vnet1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "region1-nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/26ab1224-52b0-4168-b673-e29ef41a642e/resourceGroups/vWANDemo-uksouth-vwan-rg-01/providers/Microsoft.Network/networkSecurityGroups/uksouth-nsg-01",
            "location": "uksouth",
            "name": "uksouth-nsg-01",
            "resource_group_name": "vWANDemo-uksouth-vwan-rg-01",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "3389",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "RDP-In",
                "priority": 100,
                "protocol": "*",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {
              "Environment": "jakewalsh90-vWAN-DemoLab"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.region1-rg1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "region2-nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/26ab1224-52b0-4168-b673-e29ef41a642e/resourceGroups/vWANDemo-eastus-vwan-rg-01/providers/Microsoft.Network/networkSecurityGroups/eastus-nsg-01",
            "location": "eastus",
            "name": "eastus-nsg-01",
            "resource_group_name": "vWANDemo-eastus-vwan-rg-01",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "3389",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "RDP-In",
                "priority": 100,
                "protocol": "*",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {
              "Environment": "jakewalsh90-vWAN-DemoLab"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.region2-rg1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "region1-vm01-pip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/26ab1224-52b0-4168-b673-e29ef41a642e/resourceGroups/vWANDemo-uksouth-vwan-rg-01/providers/Microsoft.Network/publicIPAddresses/uksouth-vm01-pip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.0.185.213",
            "ip_version": "IPv4",
            "location": "uksouth",
            "name": "uksouth-vm01-pip",
            "resource_group_name": "vWANDemo-uksouth-vwan-rg-01",
            "sku": "Standard",
            "sku_tier": "Regional",
            "tags": {
              "Environment": "jakewalsh90-vWAN-DemoLab"
            }
          },
          "dependencies": [
            "azurerm_resource_group.region1-rg1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "region2-vm01-pip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/26ab1224-52b0-4168-b673-e29ef41a642e/resourceGroups/vWANDemo-eastus-vwan-rg-01/providers/Microsoft.Network/publicIPAddresses/eastus-vm01-pip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.120.12.76",
            "ip_version": "IPv4",
            "location": "eastus",
            "name": "eastus-vm01-pip",
            "resource_group_name": "vWANDemo-eastus-vwan-rg-01",
            "sku": "Standard",
            "sku_tier": "Regional",
            "tags": {
              "Environment": "jakewalsh90-vWAN-DemoLab"
            }
          },
          "dependencies": [
            "azurerm_resource_group.region2-rg1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "region1-vnet1-snet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.10.11.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/26ab1224-52b0-4168-b673-e29ef41a642e/resourceGroups/vWANDemo-uksouth-vwan-rg-01/providers/Microsoft.Network/virtualNetworks/uksouth-vnet-01/subnets/uksouth-vnet-01-snet-01",
            "name": "uksouth-vnet-01-snet-01",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "vWANDemo-uksouth-vwan-rg-01",
            "virtual_network_name": "uksouth-vnet-01"
          },
          "dependencies": [
            "azurerm_resource_group.region1-rg1",
            "azurerm_virtual_network.region1-vnet1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "region2-vnet1-snet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.20.11.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/26ab1224-52b0-4168-b673-e29ef41a642e/resourceGroups/vWANDemo-eastus-vwan-rg-01/providers/Microsoft.Network/virtualNetworks/eastus-vnet-01/subnets/eastus-vnet-01-snet-01",
            "name": "eastus-vnet-01-snet-01",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "vWANDemo-eastus-vwan-rg-01",
            "virtual_network_name": "eastus-vnet-01"
          },
          "dependencies": [
            "azurerm_resource_group.region2-rg1",
            "azurerm_virtual_network.region2-vnet1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "region1-vnet1-snet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/26ab1224-52b0-4168-b673-e29ef41a642e/resourceGroups/vWANDemo-uksouth-vwan-rg-01/providers/Microsoft.Network/virtualNetworks/uksouth-vnet-01/subnets/uksouth-vnet-01-snet-01",
            "network_security_group_id": "/subscriptions/26ab1224-52b0-4168-b673-e29ef41a642e/resourceGroups/vWANDemo-uksouth-vwan-rg-01/providers/Microsoft.Network/networkSecurityGroups/uksouth-nsg-01",
            "subnet_id": "/subscriptions/26ab1224-52b0-4168-b673-e29ef41a642e/resourceGroups/vWANDemo-uksouth-vwan-rg-01/providers/Microsoft.Network/virtualNetworks/uksouth-vnet-01/subnets/uksouth-vnet-01-snet-01"
          },
          "dependencies": [
            "azurerm_network_security_group.region1-nsg",
            "azurerm_resource_group.region1-rg1",
            "azurerm_subnet.region1-vnet1-snet1",
            "azurerm_virtual_network.region1-vnet1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "region2-vnet1-snet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/26ab1224-52b0-4168-b673-e29ef41a642e/resourceGroups/vWANDemo-eastus-vwan-rg-01/providers/Microsoft.Network/virtualNetworks/eastus-vnet-01/subnets/eastus-vnet-01-snet-01",
            "network_security_group_id": "/subscriptions/26ab1224-52b0-4168-b673-e29ef41a642e/resourceGroups/vWANDemo-eastus-vwan-rg-01/providers/Microsoft.Network/networkSecurityGroups/eastus-nsg-01",
            "subnet_id": "/subscriptions/26ab1224-52b0-4168-b673-e29ef41a642e/resourceGroups/vWANDemo-eastus-vwan-rg-01/providers/Microsoft.Network/virtualNetworks/eastus-vnet-01/subnets/eastus-vnet-01-snet-01"
          },
          "dependencies": [
            "azurerm_network_security_group.region2-nsg",
            "azurerm_resource_group.region2-rg1",
            "azurerm_subnet.region2-vnet1-snet1",
            "azurerm_virtual_network.region2-vnet1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "region1-vnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.10.8.0/21"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "4f3882b4-00b8-4d33-98e6-b50bae2e870e",
            "id": "/subscriptions/26ab1224-52b0-4168-b673-e29ef41a642e/resourceGroups/vWANDemo-uksouth-vwan-rg-01/providers/Microsoft.Network/virtualNetworks/uksouth-vnet-01",
            "location": "uksouth",
            "name": "uksouth-vnet-01",
            "resource_group_name": "vWANDemo-uksouth-vwan-rg-01",
            "tags": {
              "Environment": "jakewalsh90-vWAN-DemoLab"
            }
          },
          "dependencies": [
            "azurerm_resource_group.region1-rg1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "region2-vnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.20.8.0/21"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "9c63f696-c182-420b-bd73-20eed1a30196",
            "id": "/subscriptions/26ab1224-52b0-4168-b673-e29ef41a642e/resourceGroups/vWANDemo-eastus-vwan-rg-01/providers/Microsoft.Network/virtualNetworks/eastus-vnet-01",
            "location": "eastus",
            "name": "eastus-vnet-01",
            "resource_group_name": "vWANDemo-eastus-vwan-rg-01",
            "tags": {
              "Environment": "jakewalsh90-vWAN-DemoLab"
            }
          },
          "dependencies": [
            "azurerm_resource_group.region2-rg1"
          ]
        }
      ]
    }
  ]
}